--- a/index.html
+++ b/index.html
@@ -15,20 +15,35 @@
   </style>
 </head>
 <body>
+  <div class="layout">
+    <main>
+      <div class="text_block">
+        <div class="logo"></div>
+        <h1>We're <br> <span>coming soon</span></h1>
+        <p>Hello fellow shoppers! We're currently building our new fashion store. 
+          Add your email below to stay up-to-date with announcements and our launch deals.
+        </p>
+        <div class="subscribe">
+          <input id="email" placeholder="Email Address" type="text"> 
+          <img id="icon_error" src="./images/icon-error.svg" alt="">
+          <input id="btn" type="submit" value="">
+        </div>
+        <span id="error_message">Please provide valid email</span>
+      </div>
+      <div class="photo_block">
+      </div>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/Dmitrii2111">Dmitry Hrulev</a>.
+      </p>
+    </footer>
+  </div>
 
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
   
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Dmitrii2111">Dmitry Hrulev</a>.
-    </p>
-  </footer>
+
   <script src="./src/index.js"></script>
 </body>
 </html>
+
